CHANGE go-live item faq page

--- a/docs/de-de/modules/artikel/pages/faq-pim.adoc
+++ b/docs/de-de/modules/artikel/pages/faq-pim.adoc
@@ -5,10 +5,9 @@
 :author: team-item
 
 ////
-zuletzt bearbeitet 12.08.22
+zuletzt bearbeitet 15.08.22
 ////
 
-//ToDo - includes machen für alle Fragen ab den Kapitel Attribute
 //ToDo - wenn die neue Artikel-UI als standard eingebunden wird, dann die Antworten der letzte beide Fragen unter Allgemein anpassen
 
 Auf dieser Seite findest du eine Liste der häufig gestellten Fragen zur Artikelverwaltung.
@@ -665,73 +664,6 @@ include::page$bilder.adoc[tag=itemimages-placeholder]
 
 --
 
-////
-[.collapseBox]
-.*Ich will meine eigenen Attributwerte mit den Werten eines Marktplatzes verknüpfen*
---
-
-Einige Märkte, wie z.B. xref:maerkte:varianten-vorbereiten.adoc#1350[Amazon] und xref:maerkte:ebay-einrichten.adoc#6100[eBay], verlangen, dass du deine eigenen Attributwerte mit ihren Attributwerten verknüpfst.
-Stell dir zum Beispiel vor, du verkaufst ein türkisfarbenes T-Shirt. Der Markt, auf dem du es verkaufen willst, akzeptiert jedoch nur grün und blau. Verknüpfe deine eigenen Attributwerte mit denen auf dem anderen Markt, um sicherzustellen, dass deine Artikel korrekt angezeigt werden.
-
-video::199993489#t=5m58s[vimeo]
-
---
-
-[.collapseBox]
-.*Das Bild soll sich auf einem Marktplatz ändern, je nachdem, welche Farbe der Kunde wählt*
---
-
-Soll sich das Artikelbild z.B. auf eBay ändern, je nachdem, welche Größe oder Farbe dein Kunde gewählt hat?
-Einige Märkte, wie z.B. eBay, verlangen nicht nur, dass du deine xref:artikel:attribute.adoc#500[Attribute mit dem Marktplatz verknüpfst], sondern auch, dass du deine Variantenbilder mit den passenden Attributwerten verknüpfst.
-
-//tag::market-attribute-link[]
-
-[discrete]
-==== Voraussetzungen
-
-* Hast du deine xref:artikel:artikel-verwalten.adoc#94[Varianten bereits mit den entsprechenden Bildern verknüpft]?
-* Hast du diese xref:artikel:artikel-verwalten.adoc#intable-availability[Bilder für den Marktplatz verfügbar gemacht]?
-* Hast du xref:artikel:attribute.adoc#intable-bild-link-erlauben[Bildverknüpfungen in den Grundeinstellungen zugelassen]?
-
-[discrete]
-==== Anleitung
-
-. Öffne das Menü *Artikel » Artikel bearbeiten » [Artikel öffnen] » Tab: Bilder*.
-. Wähle unter *Marktplatzattributverknüpfung* den passenden Attributwert für das Artikelbild.
-. *Speichere* (icon:save[set=plenty, role="green"]) die Einstellungen. +
-→ Wählt ein Kunde die Variante z.B. auf eBay, sieht er das passende Artikelbild.
-
-TIP: Die Option *Marktplatzattributverknüpfung* ist nur sichtbar, wenn alle oben genannten Voraussetzungen erfüllt sind.
-
-//end::market-attribute-link[]
-
---
-
-[.collapseBox]
-.*Mein plentyShop in mehreren Sprachen verfügbar. Was muss ich tun?*
---
-
-Übersetze die Namen deiner Attribute und Attributwerte in alle von dir benötigten Sprachen.
-
-[discrete]
-==== Schritt 1: Attribute übersetzen
-
-. Öffne das Menü *Einrichtung » Artikel » Attribute » [Attribut öffnen] » Tab: Name*.
-. Gib den Namen in beliebig vielen Sprachen ein.
-. *Speichere* (icon:save[set=plenty, role="green"]) die Einstellungen.
-
-include::page$attribute.adoc[tag=attribute-name-appearance-shop]
-
-[discrete]
-==== Schritt 2: Attributwerte übersetzen
-
-. Öffne das Menü *Einrichtung » Artikel » Attribute » [Attribut öffnen] » Tab: Werte*.
-
-include::page$attribute.adoc[tag=steps-attribute-value-name-translations]
-
---
-////
-
 [#800]
 == Spezielle Anwendungsfälle
 
@@ -758,8 +690,7 @@ include::page$multipacks-pakete-sets.adoc[tag=combining-products-preamble]
 .*Ich will Werbegeschenke oder Gratiszugaben ab einem bestimmten Warenwert anbieten. Wie mache ich das?*
 --
 
-Theoretisch könntest du manuell ein Werbegeschenk zu Bestellungen über einem bestimmten Warenwert hinzufügen.
-Es ist jedoch viel effizienter, wenn du diesen Vorgang mit Hilfe einer Ereignisaktion automatisierst.
+Erstelle eine Ereignisaktion, die automatisch ein Werbegeschenk zu Bestellungen ab einem bestimmten Warenwert hinzufügt.
 
 xref:artikel:gratiszugaben.adoc#[Weitere Informationen zum Vorgang].
 
@@ -771,7 +702,6 @@ xref:artikel:gratiszugaben.adoc#[Weitere Informationen zum Vorgang].
 
 Ja.
 Jedes Mal, wenn du einen Artikel mit einer Seriennummer verkaufst, kann plentymarkets protokollieren, welches Exemplar verkauft wurde.
-Mit anderen Worten kann plentymarkets festhalten, welche Seriennummer welcher Bestellung entspricht.
 
 xref:artikel:seriennummern.adoc#[Weitere Informationen].
 
