--- a/docs/de-de/modules/ROOT/nav.adoc
+++ b/docs/de-de/modules/ROOT/nav.adoc
@@ -63,6 +63,7 @@
 *** xref:artikel:detailansicht.adoc[Detailansicht: Gestaltung]
 *** xref:artikel:verzeichnis.adoc[Detailansicht: Verzeichnis der Datenfelder]
 *** xref:artikel:group-functions.adoc[Massenbearbeitung]
+** xref:artikel:faq-pim.adoc[FAQ: Artikelverwaltung]
 * xref:warenwirtschaft:warenwirtschaft.adoc[Waren]
 ** xref:warenwirtschaft:preparation.adoc[Vorbereitende Einstellungen]
 *** xref:warenwirtschaft:lager-einrichten.adoc[Lager planen]
