--- a/docs/de-de/modules/ROOT/nav.adoc
+++ b/docs/de-de/modules/ROOT/nav.adoc
@@ -108,6 +108,7 @@
 ** xref:crm:op-liste.adoc[Offene Posten]
 ** xref:crm:ticketsystem-nutzen.adoc[Ticketsystem]
 ** xref:crm:newsletter-versenden.adoc[Newsletter]
+** xref:crm:faq.adoc[Fragen und Antworten]
 ** xref:crm:praxisbeispiele.adoc[Praxisbeispiele]
 *** xref:crm:praxisbeispiel-tracking-url-senden.adoc[Tracking-URL an Kund:innen senden]
 ** xref:crm:kontakte-verwalten.adoc[Kontakte (altes Tool)]
