--- a/docs/de-de/modules/crm/pages/faq.adoc
+++ b/docs/de-de/modules/crm/pages/faq.adoc
@@ -1,11 +1,9 @@
-= FAQ
-:keywords: FAQ CRM
+= Fragen und Antworten
+:keywords: FAQ CRM, Fragen und Antworten CRM
 :description: Auf dieser Handbuchseite findest du Fragen und Antworten aus dem Themengebiet CRM.
 :author: team-crm
 
 Auf dieser Handbuchseite findest du Fragen und Antworten aus dem Themengebiet CRM. 
-
-// TODO: Datei in nav.adoc einbinden
 
 [#faq-bereich-adressen]
 == Adressen
@@ -19,7 +17,7 @@ Wenn die Adresse mit einem Auftrag verknüpft ist, ist es _nicht_ möglich, dies
 
 Um zu vermeiden, dass "alte" Adressen deiner Kontakte fälschlicherweise bei der manuellen Auftragsanlage verwendet werden, muss die neue Adresse als primäre Rechnungs- und Lieferadresse gesetzt werden. Danach wird diese neue primäre Adresse standardmäßig in der Auftragsanlage sowohl in deinem plentymarkets Backend als auch in deinem Online-Shop angezeigt.
 
-*_Hinweis:_* Dein Kunde kann in seinem Mein Konto-Bereich die alte Adresse löschen bzw. bestehende Adressen bearbeiten. Diese Adressen werden dann aber nicht komplett entfernt und sind nach wie vor in deinem plentymarkets System sichtbar.
+*_Hinweis:_* Dein Kunde kann in seinem Mein Konto-Bereich die alte Adresse löschen bzw. bestehende Adressen bearbeiten. Diese Adressen werden dann aber nicht komplett entfernt bzw. mit deinem plentymarkets Backend synchronisiert und sind nach wie vor in deinem plentymarkets System sichtbar.
 --
 
 [#faq-adresse-nicht-waehlbar]
