remove Amazon MWS info - DE

--- a/docs/de-de/modules/maerkte/partials/amz-einrichtungsmenue.adoc
+++ b/docs/de-de/modules/maerkte/partials/amz-einrichtungsmenue.adoc
@@ -1,32 +1,9 @@
 Gehe wie unten beschrieben vor, um Amazon im Einrichtungsmenü einzurichten.
 
-==== MWS-Schnittstelle einrichten
-
-Nachdem du dich registriert hast, richte bei Amazon die MWS-Schnittstelle ein. MWS steht für Marketplace Web Service. Dieser Service unterstützt API-Funktionen und muss daher für den Datenaustausch mit plentymarkets eingerichtet werden.
-
-Klicke unter diesem link:https://sellercentral.amazon.de/apps/manage[Link^] auf *Neuen Entwickler autorisieren*, um plentymarkets als Entwickler zu autorisieren und der Schnittstelle den Zugriff auf dein Konto zu erlauben. Du benötigst folgende Informationen für die Schnittstelle:
-
-*  Benutzername des Entwicklers: plentymarkets
-*  Entwickler-ID EU-Marktplätze: 6860-7675-7360
-*  Entwickler-ID Marktplatz USA: 5751-6263-3716
-
-Wenn du plentymarkets als Entwickler autorisiert hast, erhältst du die Verkäufer-ID, die du zum Einrichten der Schnittstelle in plentymarkets benötigst.
-
-Wie du die MWS-Schnittstelle bei Amazon einrichtest, erfährst du außerdem in diesem Video-Tutorial:
-
-.MWS-Schnittstelle einrichten
-video::317425771[vimeo]
-
-[TIP]
-.MWS-Autorisierungstoken
-====
-Der MWS-Autorisierungstoken hat ein Ablaufdatum und muss in der Seller Central wieder aktiviert werden, wenn er abgelaufen ist.
-====
-
 [#300]
-==== Amazon-Benutzerkonto einrichten
+==== Zugriff erlauben und Amazon-Konto einrichten
 
-Richte zunächst ein neues Konto für Amazon in plentymarkets ein.
+Nun erstellst du ein Konto in plentymarkets. Pro Amazon-Plattform erstellst du ein eigenes Konto. Du erlaubst plentymarkets Zugriff auf dein Amazon-Konto, damit Daten zwischen Amazon und plentymarkets ausgetauscht werden können. Danach nimmst du die weiteren Einstellungen vor.
 
 [TIP]
 .Amazon-Benutzerkonto mit Assistent einrichten
@@ -40,16 +17,20 @@ Konto erstellen:
 . Öffne das Menü *Einrichtung » Märkte » Amazon » Einstellungen*.
 . Klicke auf *Neues Konto*. +
 → Das Fenster *Neues Amazon Seller Central-Konto erstellen* wird geöffnet.
-. Wähle eine *Amazon-Plattform* aus.
+. Wähle aus der Dropdown-Liste eine *Amazon-Plattform* aus.
 . Gib die *E-Mail-Adresse* ein, die du für die Plattform verwendest. +
-*_Wichtig:_* Alle plentymarkets E-Mail-Adressen, über die du Nachrichten an Amazon schickst, müssen zuvor bei Amazon im Seller Central-Bereich autorisiert werden.
+*_Wichtig:_* Alle plentymarkets E-Mail-Adressen, über die du Nachrichten an Amazon schickst, müssen vorher bei Amazon im Seller Central-Bereich autorisiert werden.
 . Klicke auf *Neues Konto erstellen*. +
 → Das Konto wird erstellt.
-. Klicke links auf das zuvor erstellte Konto in der Kontenübersicht. +
+. Klicke links in der Kontoübersicht auf das neu erstellte Konto. +
 → Das Tab *Einstellungen* für dieses Konto wird geöffnet.
-. Klicke zuerst auf die Schaltfläche *Zugriff erlauben*. +
-→ Hier erlaubst du plentymarkets Zugriff auf dein Amazon-Konto, damit Daten zwischen Amazon und plentymarkets ausgetauscht werden können. Du wirst zu Amazon weitergeleitet und musst die Zugangsdaten deines Amazon-Verkäuferkontos eingeben. Nachdem du dich bei Amazon eingeloggt hast, wird dir angezeigt, auf welche Daten aus Amazon plentymarkets zugreifen darf. Klicke dort auf *Confirm*, um die Autorisierung abzuschließen. +
-→ In plentymarkets wird das Fenster *Autorisierung abschließen* geöffnet. Klicke auf *Abschließen*, um mit der Einrichtung deines Kontos fortzufahren.
+. Klicke auf die Schaltfläche *Zugriff erlauben*. +
+→ Du wirst zu Amazon weitergeleitet.
+. Gib dort die Zugangsdaten deines Amazon-Verkäuferkontos ein, um dich anzumelden. +
+→ Dir wird angezeigt, auf welche Amazon-Daten plentymarkets zugreifen darf.
+. Klicke auf *Confirm*, um den Zugriff zu erlauben. +
+→ In plentymarkets wird das Fenster *Autorisierung abschließen* geöffnet.
+. Klicke auf *Abschließen*.
 . Nimm die Einstellungen im Tab *Einstellungen* vor. Beachte dabei die Erläuterungen in <<#amazon-tab-einstellungen>>. +
 *_Hinweis:_* Alle Angaben im Bereich *Zugangsdaten* sind Pflichtangaben.
 . Speichere (terra:save[]) die Einstellungen.
@@ -65,6 +46,12 @@ Konto erstellen:
 
 | *Verkäufer-ID*
 | Verkäufer-ID eingeben, wie von Amazon erhalten. Wenn du ein europäisches Verkäuferkonto hast, ist die Verkäufer-ID für jede Plattform gleich.
+
+| *Zugriff erlauben*
+| Über diese Schaltfläche erlaubst du plentymarkets Zugriff auf dein Amazon-Konto, damit Daten zwischen Amazon und plentymarkets ausgetauscht werden können. Du wirst zu Amazon weitergeleitet und gibst dort die Zugangsdaten deines Amazon-Verkäuferkontos ein. Nachdem du dich bei Amazon eingeloggt hast, wird dir angezeigt, auf welche Daten aus Amazon plentymarkets zugreifen darf. Klicke dort auf *Confirm*, um die Autorisierung abzuschließen. +
+→ In plentymarkets wird das Fenster *Autorisierung abschließen* geöffnet. Klicke auf Abschließen, um mit der Einrichtung deines Kontos fortzufahren.
+
+*_Wichtig:_* Führe diese Schritte aus, bevor du die weiteren Kontoeinstellungen vornimmst.
 
 | *Händler-Token*
 | Händler-Token eingeben, wie im Seller Central zu finden.
