Add introduction and fix formatting

--- a/docs/de-de/modules/crm/pages/faq.adoc
+++ b/docs/de-de/modules/crm/pages/faq.adoc
@@ -3,7 +3,7 @@
 :description: Auf dieser Handbuchseite findest du Fragen und Antworten aus dem Themengebiet CRM.
 :author: team-crm
 
-Auf dieser Handbuchseite findest du Fragen und Antworten aus dem Themengebiet CRM. 
+Auf dieser Handbuchseite findest du Fragen und Antworten aus dem Themengebiet CRM. Wir werden diese Liste kontinuierlich um weitere Fragen und Antworten ergänzen.
 
 [#faq-bereich-adressen]
 == Adressen
@@ -89,7 +89,8 @@ Weitere Informationen findest du auf der Handbuchseite xref:crm:schnellsuche.ado
 [.collapseBox]
 .Ich finde den Button zum Anonymisieren der Kund:innendaten nicht. Wo ist er?
 --
-Möglicherweise befindest du dich im falschen Menü. Das Anonymisieren von Kontaktdaten ist nur über das Menü *CRM » Schnellsuche* möglich, _nicht_ über das Menü *CRM » Kontakte*. +
+Möglicherweise befindest du dich im falschen Menü. Das Anonymisieren von Kontaktdaten ist nur über das Menü *CRM » Schnellsuche* möglich, _nicht_ über das Menü *CRM » Kontakte*. 
+
 Weitere Informationen zum Anonymisieren von Kontaktdaten findest du in der Box <<#faq-kundendaten-loeschen, Wie lösche ich Kontaktdaten DSGVO-konform?>> und auf der Handbuchseite xref:crm:schnellsuche.adoc#datensatz-anonymisieren[Schnellsuche].
 --
 
