--- a/docs/en-gb/modules/crm/pages/faq.adoc
+++ b/docs/en-gb/modules/crm/pages/faq.adoc
@@ -3,7 +3,7 @@
 :description: On this page, you can find questions and answers about the CRM area.
 :author: team-crm
 
-On this page, you can find questions and answers about the CRM area. 
+On this page, you can find questions and answers about the CRM area. We will continuously update this list and add more questions and answers.
 
 [#faq-section-addresses]
 == Addresses
@@ -43,7 +43,7 @@ The address data of the person who ordered as a guest in your plentyShop can onl
 
 *Guest orders in the CRM » Quick search menu:*
 
-* In case of guest orders via your plentyShop, the saved data record consists only of the address and the corresponding order. A contact ID is _not_ assigned. But, the symbol material:done[] is shown in the overview in the *Guest* column.
+* In case of guest orders via your plentyShop, the saved data record consists only of the address and the corresponding order. A contact ID is _not_ assigned. But, the symbol material:done[] is shown in the overview’s *Guest* column.
 
 * In case of a guest order via a marketplace, a contact ID is assigned and the symbol material:done[] is shown in the overview’s *Guest* column.
 --
@@ -59,8 +59,8 @@ A customer asks you to delete her data from your system. To be in compliance wit
 
 * Go to *CRM » Quick search*.
 * Search for the data record and open it.
-* Click onicon:user-secret[] (*Anonymise data record*) in the upper line.
-* → A window opens. Here, you have to enter the contact ID again to confirm the anonymisation action. +
+* Click on icon:user-secret[] (*Anonymise data record*) in the upper line.
+* A window opens. Here, you have to enter the contact ID again to confirm the anonymisation action. +
 *_Important:_* This anonymisation action _cannot_ be undone.
 * Click on *Anonymise*.
 
@@ -89,7 +89,8 @@ For further information, refer to the xref:crm:quick-search.adoc#ananomyise-data
 [.collapseBox]
 .I cannot find the button to anonymise customer data. Where is it?
 --
-It is most likely that you are looking for the button in the wrong menu. Anonymising contact data is only possible via the *CRM » Quick search* menu and _not_ via the *CRM » Contacts* menu. +
+It is most likely that you are looking for the button in the wrong menu. Anonymising contact data is only possible via the *CRM » Quick search* menu and _not_ via the *CRM » Contacts* menu. 
+
 For further information about anonymising contact data, refer to the box <<#faq-delete-customer-data, How can I delete contact data in compliance with GDPR?>> and to the xref:crm:quick-search.adoc#anonymise-data-record[Quick search] page.
 --
 
