--- a/docs/de-de/modules/maerkte/partials/amz-einrichtungsmenue.adoc
+++ b/docs/de-de/modules/maerkte/partials/amz-einrichtungsmenue.adoc
@@ -451,3 +451,45 @@ a| Die folgenden Einstellungen befinden sich zwar im Bereich *Eigener Versand (M
 
 *_Hinweis:_* Diese Einstellungen greifen bei eigenem Versand (MFN) und bei Versand durch Amazon (FBA).
 |===
+
+[#700]
+==== Konto aktivieren
+
+Du hast alle Einstellungen vorgenommen? Dann aktiviere jetzt das Konto, um den Datenaustausch mit Amazon zu starten.
+
+Wie du vorgehst hängt davon ab, ob du beim Einrichten des Kontos den Zugriff schon erlaubt hast.
+
+[tabs]
+====
+Konto aktivieren und Zugriff erlauben::
++
+--
+[.instruction]
+Konto aktivieren und Zugriff erlauben:
+
+. Öffne das Menü *Einrichtung » Märkte » Amazon » Einstellungen » [Konto öffnen]*. +
+→ Das Tab *Einstellungen* für dieses Konto wird geöffnet.
+. Aktiviere die Option *Aktiv*.
+. Klicke auf die Schaltfläche *Zugriff erlauben*. +
+→ Du wirst zu Amazon weitergeleitet.
+. Gib dort die Zugangsdaten deines Amazon-Verkäuferkontos ein, um dich anzumelden. +
+→ Es wird angezeigt, auf welche Amazon-Daten plentymarkets zugreifen darf.
+. Klicke auf *Confirm*, um den Zugriff zu erlauben. +
+→ In plentymarkets wird das Fenster *Autorisierung abschließen* geöffnet.
+. Klicke auf *Abschließen*.
+. Speichere (terra:save[]) die Einstellungen.
+
+--
+ 
+Konto aktivieren, wenn Zugriff schon erlaubt wurde::
++
+--
+[.instruction]
+Konto aktivieren, wenn Zugriff schon erlaubt wurde:
+
+. Öffne das Menü *Einrichtung » Märkte » Amazon » Einstellungen » [Konto öffnen]*. +
+→ Das Tab *Einstellungen* für dieses Konto wird geöffnet.
+. Aktiviere die Option *Aktiv*.
+. Speichere (terra:save[]) die Einstellungen.
+--
+====
