--- a/docs/de-de/modules/auftraege/pages/order-type-offer.adoc
+++ b/docs/de-de/modules/auftraege/pages/order-type-offer.adoc
@@ -1,4 +1,77 @@
 = Auftragstyp Angebot
 
-:keywords: Angebot
-:author: team-order-core
+:keywords: Angebot, Angebote, Angebot erzeugen, Auftragsdokumente, Dokumentenvorlage, Dokumententyp, Dokument, Angebotsdokument, Dokumentvorlage, Dokumenttyp
+:author: team-order-core, team-docs-automation
+
+Du kannst Kund:innen individuell Angebote erstellen und ihnen zukommen lassen. Dafür gibt es das Dokument Angebot, das du als PDF-Datei generieren kannst, um diese z.B. zu drucken oder deinen Kund:innen als E-Mail-Anhang zukommen zu lassen.
+
+[#document-template-offer]
+== Dokumentenvorlage für Angebote einrichten
+
+Bevor du das Dokument Angebot generieren kannst, muss eine Dokumentenvorlage eingerichtet werden. Dies geschieht im Menü *Einrichtung » Mandant » [Mandant wählen] » Standorte » [Standort wählen] » Dokumente » Angebot*. +
+Weitere Informationen und Anleitungen zur Einrichtung der Dokumentenvorlage findest du auf der Handbuchseite xref:auftraege:auftragsdokumente.adoc#[Auftragsdokumente].
+
+[#create-document-offer]
+== Einzelnes Dokument Angebot erzeugen
+
+Angebote erstellst du individuell für Kund:innen, daher sind auch die dazugehörigen Dokumente direkt mit diesem Auftrag vom Typ *Angebot* verknüpft. Das bedeutet, dass das Dokument nur für den Auftragstyp Angebot erstellt werden kann. Möchtest du also z.B. ein PDF-Dokument *Angebot* verschicken, dann lege zunächst das Angebot als Auftragstyp an. Das dazugehörige Dokument legst du manuell wie im Folgenden beschrieben an.
+
+[.instruction]
+Dokument Angebot manuell erzeugen:
+
+. Öffne das Menü *Aufträge » Aufträge (Testphase)*. +
+. Suche (material:search[]) anhand der Filtereinstellungen das Angebot, für das das Dokument erzeugt werden soll.
+. Öffne das gewünschte Angebot.
+. Gehe in den Bereich *Dokumente*.
+. Klicke rechts auf *Dokument erstellen* (material:note_add[]).
+. Wähle die Option *Angebot*.
+. Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<table-generate-offer-document>>.
+. Klicke auf *Ausführen*, um das Dokument Angebot zu erzeugen. +
+→ Es öffnet sich eine *PDF-Datei* mit dem soeben erzeugten Dokument Angebot.
+
+[[table-generate-offer-document]]
+.Einstellungen für das Dokument Angebot
+[cols="1,3"]
+|====
+|Einstellung |Erläuterung
+
+| *Datum*
+|Gib das Datum ein, das auf dem Dokument Angebot angezeigt werden soll oder wähle ein Datum über den Kalender (material:today[]). Standardmäßig ist das aktuelle Datum voreingestellt.
+
+|*Kommentar*
+|Gib optional einen Text ein, der auf dem Dokument Angebot unterhalb der Artikelpositionen angezeigt wird.
+
+|====
+
+[#300]
+== Versand von Angebotsdokumenten automatisieren
+
+Du hast Kund:innen individuelle Angebote erstellt, die dazugehörigen Dokumente erzeugt und möchtest diese nun an die Kund:innen senden? Diesen Arbeitsschritt kannst du automatisieren, indem du die passende Ereignisaktion einrichtest. Zum Versenden des Dokuments Angebot als E-Mail Anhang empfehlen wir dir die in <<table-event-procedure-sending-offer-document>> beschriebene Ereignisaktion. Gehe wie im Folgenden beschrieben vor, um die Ereignisaktion einzurichten.
+
+:table-event-procedure: <<table-event-procedure-sending-offer-document>>
+include::_includes:partial$event-procedure.adoc[]
+
+[[table-event-procedure-sending-offer-document]]
+.Ereignisaktion "Angebot als PDF versenden" einrichten
+[cols="1,3,3"]
+|====
+|Einstellung |Option |Auswahl
+
+| *Ereignis*
+| *Dokumente > Angebot generiert*
+|
+
+| *Filter*
+| *Auftrag > Auftragstyp*
+| *Angebot*
+
+| *Aktion*
+| *Kunde > E-Mail versenden*
+|Über Hinzufügen (icon:plus-square[role="green"]) für den *Kunden* die entsprechende E-Mail-Vorlage für den Versand des Angebots als PDF (z.B. "Angebot als PDF senden") wählen.
+|====
+
+[TIP]
+.Du siehst die passende E-Mail-Vorlage nicht?
+====
+Du siehst für die Ereignisaktion "Angebot als PDF versenden" die passende E-Mail-Vorlage nicht? Dann liegt das daran, dass du sie noch nicht erstellt hast. Dies kannst du im Menü *Einrichtung » Mandant » _Mandant wählen_ » E-Mail » Vorlagen* machen. Klicke dort auf *Neue E-Mail-Vorlage* (icon:plus-square[role="green"]) und erstelle die Vorlage nach deinen Anforderungen. Der Name, den du hier für die E-Mail-Vorlage vergibst, wird dann auch in den Ereignisaktionen ausgegeben. Weitere Informationen zum Einrichten findest du auf der Handbuchseite xref:crm:e-mails-versenden.adoc#1200[E-Mail-Vorlage erstellen].
+====
