--- a/docs/de-de/modules/auftraege/pages/preparatory-settings.adoc
+++ b/docs/de-de/modules/auftraege/pages/preparatory-settings.adoc
@@ -7,6 +7,12 @@ Bevor du mit der Verwaltung und Abwicklung deiner Aufträge starten kannst, soll
 
 Im Menü *Einrichtung » Aufträge » Einstellungen* wählst du zunächst die Einstellungen, die für Aufträge automatisch eingestellt werden bzw. bei bestimmten Auftragsstatus oder Bedingungen gelten sollen. Zum Beispiel wählst du Standard-Einstellungen für die Auftragsherkunft und den Status von Aufträgen.
 
+[TIP]
+.Umschaltfläche für neue Auftrags-UI aktivieren
+======
+Während sich die neue Auftrags-UI noch in der beta-Phase befindet, kannst du selbst entscheiden, ob du diese bereits für die Verwaltung von Aufträgen verwenden möchtest. Aktivierst du im Menü *Einrichtung » Aufträge » Auftragstypen » Auftrag [Beta]* unten die Umschaltfläche *Neue Auftrags-UI (beta) verwenden und mit anderen Menüs verknüpfen*, wird automatisch die neue UI verwendet und mit anderen Menüs verknüpft. Somit führen Links aus anderen Bereichen immer zur neuen Auftrags-UI. Diese Einstellung muss manuell vorgenommen werden, denn standardmäßig ist die alte Auftrags-UI vorausgewählt und mit den anderen Menüs verknüpft.
+======
+
 [#conditions]
 == Wichtige Vorbedingungen beachten
 
