update Android version to 6.0 for upcoming SDK update / required minimal version

--- a/docs/de-de/modules/app/partials/hardware-pos.adoc
+++ b/docs/de-de/modules/app/partials/hardware-pos.adoc
@@ -8,7 +8,7 @@ Das xref:pos:pos.adoc#[Kassensystem plentyPOS] wird über die plentymarkets App 
 
 | **Betriebssysteme**
 a|
-* Android-Geräte mit OS-Version ab 5.1, ARM Prozessor und den Geräteklassen Small, Normal, Large und X-Large. Die DPI-Zahl eines mobilen Geräts kann z.B. link:http://dpi.lv/[hier^] ermittelt werden.
+* Android-Geräte mit Mindestversion 6.0, ARM Prozessor und den Geräteklassen Small, Normal, Large und X-Large. Die DPI-Zahl eines mobilen Geräts kann z.B. link:http://dpi.lv/[hier^] ermittelt werden.
 * iOS-Geräte (iPad, iPhone, iPod) mit OS-Version ab 11 +
 → Bei iOS-Geräten gibt es Einschränkungen beim Scannen mit Bluetooth-Scannern. +
 → Kassen mit Standort Österreich können nur auf Android-Geräten betrieben werden.
@@ -16,7 +16,7 @@ a|
 a|Bei jedem regulären Release
 
 * Elo Touch Solutions I-Series 15I1 - E021201
-* M3 SM10 (Android 5.1)
+* M3 SM10
 * Samsung Galaxy Tab A 6 - SM-T580
 * Apple iPad Air 2
 
@@ -26,7 +26,7 @@ Regelmäßig
 * Samsung Galaxy Tab 4 - SM-T530
 * Apple iPad Mini Retina
 * Advantech UPOS-211 sundsits Edition
-* Honeywell Dolphin 75e (Android 4.4.4)
+* Honeywell Dolphin 75e
 
 Punktuell
 
