--- a/docs/en-gb/modules/app/partials/hardware-mobile-inventory.adoc
+++ b/docs/en-gb/modules/app/partials/hardware-mobile-inventory.adoc
@@ -6,8 +6,7 @@ If you want to use the plentymarkets app for managing the stock of your warehous
 |====
 |Hardware |Where to buy in Germany
 
-|M3 SM10 Mobile Computer +
-(Android 5.1)
+|M3 SM10 Mobile Computer
 |link:https://www.sundsits.de/M3SM10-Mobile-Computer-WiFi-und-LTE[View SundS ITS offer^] +
 
 SundS ITS +
