--- a/docs/en-gb/modules/markets/pages/amazon-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/amazon-setup.adoc
@@ -1,5 +1,5 @@
 = Setting up Amazon
-:keywords: setup amazon, amazon setup, setting up amazon
+:keywords: Amazon, Amazon setup, setting up Amazon, FBA, Amazon FBA, Fulfillment by Amazon, MFN, Amazon MFN, Merchant Fulfillment Network, Prime, SameDay, NextDay, SecondDay, Market, Marketplace, Multi-Channel, Multichannel, Multi-Channel Amazon, Amazon Multi-Channel, Amazon Business, Amazon B2B, Amazon VCS, VCS, VCS Lite, IDU, Invoice Document Uploader, Amazon invoice, VAT calculation service, Amazon Pay, Amazon product type, flat file, flatfile, ASIN, ASIN matching, Amazon platform, amazon.de, authorisation, authentication, credit note import, VCS plentymarkets, VCS Amazon
 :description: Multi-Channel in plentymarkets: Set up the interface to the market Amazon in your plentymarkets system.
 :id: GL6NEIV
 :author: team-plenty-channel
@@ -53,15 +53,15 @@ With plentymarkets, you can sell on the Amazon platforms Amazon.de, Amazon.co.uk
 There are two ways to set up the Amazon interface:
 
 * In the assistant *Base settings - Amazon* (<<#500, How?>>)
-* In the *Setup* menu (<<#550, How?>>)
+* *_Or:_* In the *Setup* menu (<<#550, How?>>)
 
 [#500]
-=== Setting up Amazon in the assistant
+=== _Alternative 1:_ Setting up Amazon in the assistant
 
 include::partial$amz-basic-assistant.adoc[]
 
 [#550]
-=== Setting up Amazon in the Setup menu
+=== _Alternative 2:_ Setting up Amazon in the Setup menu
 
 include::partial$amz-setup-menu.adoc[]
 
@@ -79,6 +79,8 @@ The *Process status* tab contains information about order reports for your MFN o
 
 include::partial$activate-referrer.adoc[]
 
+
+// Diese Infos könnten auf eine eigene MFN-Seite?
 [#6900]
 == Carrying out Amazon specific shipping profile settings
 
@@ -142,7 +144,7 @@ Setting up the manual order import:
 [[order-import-amazon]]
 .Order import for Amazon
 [cols="1,3a"]
-|====
+|===
 | Setting | Explanation
 
 | *Book incoming payment*
@@ -159,7 +161,7 @@ Setting up the manual order import:
 
 | *CSV file*
 | Select the CSV file for the order import.
-|====
+|===
 
 [.instruction]
 Selecting the CSV file for the order import:
@@ -204,6 +206,7 @@ Orders have to meet the following requirements in order for the shipping confirm
 *  Outgoing items booked (time must not be in the future)
 
 If the shipping confirmation is not automatically transferred, for example because the servers are temporarily unavailable, or if you want orders to be manually confirmed shortly before an accounting deadline, so that they will still be taken into consideration during the next payment, then you can also transfer shipping confirmations manually to Amazon. No shipping confirmation is sent to Amazon for Prime orders (Amazon_Prime, Amazon_PrimeSame_Day, Amazon_Prime_NextDay, and Amazon_Prime_SecondDay).
+
 [.instruction]
 Manually sending shipping confirmations to Amazon:
 
@@ -275,7 +278,7 @@ The basic settings *Incoming payment* and *Shipping confirmation* are relevant f
 
 Even with Amazon, you have to anticipate the occasional order cancellation after a shipment has taken place. The customer then has to send the items back to you directly. For further information about creating a return in plentymarkets and resetting the outgoing items again, refer to the xref:stock-management:outgoing-items.adoc#[Booking items out] page of the manual.
 
-Because Amazon received the customer's payment on your behalf, the reversal also has to take place via Amazon. You also have to take care of this in the order folder in Seller Central.
+Amazon received the customer’s payment on your behalf. As such, the reversal also has to take place via Amazon. You also have to take care of this in the order folder in Seller Central.
 
 [IMPORTANT]
 .Carrying out a reversal manually or with the help of an event procedure
@@ -319,11 +322,11 @@ Use event procedures to initiate refunds in plentymarkets. The automatic credit 
 [[event-procedure-automatic-return]]
 .Event procedure for automatically sending returns to Amazon
 [cols="1,3,3"]
-|====
+|===
 | Setting | Option | Selection
 
 | *Event*
-|Select an event. +
+| Select an event. +
 *_Important:_* Do not select the event *Order generation: New credit note*. This may lead to credit notes being created multiple times at Amazon.
 |
 
@@ -335,7 +338,7 @@ Use event procedures to initiate refunds in plentymarkets. The automatic credit 
 | *Procedure*
 | *Return > Create a return at Amazon*
 |
-|====
+|===
 
 [#3100]
 [#3110]
@@ -361,7 +364,7 @@ include::_includes:partial$event-procedure-tabbed.adoc[]
 [[event-procedure-update-order-status]]
 .Event procedure for automatically updating order statuses
 [cols="1,3,3"]
-|====
+|===
 |Setting |Option |Selection
 
 | *Event*
@@ -379,7 +382,7 @@ include::_includes:partial$event-procedure-tabbed.adoc[]
 | *Procedure*
 | *Order > Change status*
 | Select the status in which stock is reserved.
-|====
+|===
 --
 
 Order base settings::
@@ -395,7 +398,6 @@ Defining order status for stock reservation:
 . Save (terra:save[]) the settings.
 --
 ====
-'''
 
 [#6800]
 == Setting up invoice generation for Amazon orders
@@ -403,14 +405,13 @@ Defining order status for stock reservation:
 include::partial$invoice-creation.adoc[]
 
 [#4500]
-== Permitting payment method in a customer classes
+== Permitting payment method in customer classes
 
-The *Amazon* payment method is used for orders that were placed on Amazon and transferred to your plentymarkets system. Do not confuse this with *Amazon Pay*, which is a way for customers to use the Amazon checkout process when placing orders in your plentyShop.
-
-As soon as an active Amazon account exists, the payment method is automatically available in your plentymarkets system. No separate configurations are needed for this. You just need to permit the payment method in one or more customer classes.
+As soon as an active Amazon account exists, the *Amazon* payment method is automatically available in your plentymarkets system. No separate configurations are needed for this. You just need to permit the payment method in one or more customer classes.
 
 :payment-method: Amazon
 include::partial$activate-payment-method.adoc[tag=mop-customer-class]
+
 
 [#6600]
 == Viewing the API log
