remove Amazon MWS info - DE (#962)
* remove Amazon MWS info - DE

* update

* Update amazon-einrichten.adoc

* Update amz-einrichtungsmenue.adoc

* update translation

--- a/docs/de-de/modules/maerkte/partials/amz-einrichtungsmenue.adoc
+++ b/docs/de-de/modules/maerkte/partials/amz-einrichtungsmenue.adoc
@@ -1,32 +1,9 @@
 Gehe wie unten beschrieben vor, um Amazon im Einrichtungsmenü einzurichten.
 
-==== MWS-Schnittstelle einrichten
-
-Nachdem du dich registriert hast, richte bei Amazon die MWS-Schnittstelle ein. MWS steht für Marketplace Web Service. Dieser Service unterstützt API-Funktionen und muss daher für den Datenaustausch mit plentymarkets eingerichtet werden.
-
-Klicke unter diesem link:https://sellercentral.amazon.de/apps/manage[Link^] auf *Neuen Entwickler autorisieren*, um plentymarkets als Entwickler zu autorisieren und der Schnittstelle den Zugriff auf dein Konto zu erlauben. Du benötigst folgende Informationen für die Schnittstelle:
-
-*  Benutzername des Entwicklers: plentymarkets
-*  Entwickler-ID EU-Marktplätze: 6860-7675-7360
-*  Entwickler-ID Marktplatz USA: 5751-6263-3716
-
-Wenn du plentymarkets als Entwickler autorisiert hast, erhältst du die Verkäufer-ID, die du zum Einrichten der Schnittstelle in plentymarkets benötigst.
-
-Wie du die MWS-Schnittstelle bei Amazon einrichtest, erfährst du außerdem in diesem Video-Tutorial:
-
-.MWS-Schnittstelle einrichten
-video::317425771[vimeo]
-
-[TIP]
-.MWS-Autorisierungstoken
-====
-Der MWS-Autorisierungstoken hat ein Ablaufdatum und muss in der Seller Central wieder aktiviert werden, wenn er abgelaufen ist.
-====
-
 [#300]
 ==== Amazon-Benutzerkonto einrichten
 
-Richte zunächst ein neues Konto für Amazon in plentymarkets ein.
+Richte zuerst ein neues Konto für Amazon in plentymarkets ein.
 
 [TIP]
 .Amazon-Benutzerkonto mit Assistent einrichten
@@ -40,16 +17,13 @@ Konto erstellen:
 . Öffne das Menü *Einrichtung » Märkte » Amazon » Einstellungen*.
 . Klicke auf *Neues Konto*. +
 → Das Fenster *Neues Amazon Seller Central-Konto erstellen* wird geöffnet.
-. Wähle eine *Amazon-Plattform* aus.
+. Wähle aus der Dropdown-Liste eine *Amazon-Plattform* aus.
 . Gib die *E-Mail-Adresse* ein, die du für die Plattform verwendest. +
-*_Wichtig:_* Alle plentymarkets E-Mail-Adressen, über die du Nachrichten an Amazon schickst, müssen zuvor bei Amazon im Seller Central-Bereich autorisiert werden.
+*_Wichtig:_* Alle plentymarkets E-Mail-Adressen, über die du Nachrichten an Amazon schickst, müssen vorher bei Amazon im Seller Central-Bereich autorisiert werden.
 . Klicke auf *Neues Konto erstellen*. +
 → Das Konto wird erstellt.
-. Klicke links auf das zuvor erstellte Konto in der Kontenübersicht. +
+. Klicke links in der Kontoübersicht auf das neu erstellte Konto. +
 → Das Tab *Einstellungen* für dieses Konto wird geöffnet.
-. Klicke zuerst auf die Schaltfläche *Zugriff erlauben*. +
-→ Hier erlaubst du plentymarkets Zugriff auf dein Amazon-Konto, damit Daten zwischen Amazon und plentymarkets ausgetauscht werden können. Du wirst zu Amazon weitergeleitet und musst die Zugangsdaten deines Amazon-Verkäuferkontos eingeben. Nachdem du dich bei Amazon eingeloggt hast, wird dir angezeigt, auf welche Daten aus Amazon plentymarkets zugreifen darf. Klicke dort auf *Confirm*, um die Autorisierung abzuschließen. +
-→ In plentymarkets wird das Fenster *Autorisierung abschließen* geöffnet. Klicke auf *Abschließen*, um mit der Einrichtung deines Kontos fortzufahren.
 . Nimm die Einstellungen im Tab *Einstellungen* vor. Beachte dabei die Erläuterungen in <<#amazon-tab-einstellungen>>. +
 *_Hinweis:_* Alle Angaben im Bereich *Zugangsdaten* sind Pflichtangaben.
 . Speichere (terra:save[]) die Einstellungen.
@@ -61,10 +35,21 @@ Konto erstellen:
 | Einstellung | Erläuterung
 
 | *Amazon-Plattform*
-| Eine Plattform muss direkt beim Erstellen gewählt werden und kann hier geändert werden. Wenn du ein europäisches Verkäuferkonto hast, kannst du für jede Plattform, auf der du verkaufen möchtest, eigene Einstellungen vornehmen. Weitere Informationen dazu findest du im Abschnitt <<#200, Amazon-Benutzerkonto einrichten>>.
+| Eine Plattform muss direkt beim Erstellen gewählt werden und kann hier geändert werden. Wenn du ein europäisches Verkäuferkonto hast, kannst du für jede Plattform, auf der du verkaufen möchtest, eigene Einstellungen vornehmen. Weitere Informationen dazu findest du im Abschnitt <<#300, Amazon-Benutzerkonto einrichten>>.
 
 | *Verkäufer-ID*
 | Verkäufer-ID eingeben, wie von Amazon erhalten. Wenn du ein europäisches Verkäuferkonto hast, ist die Verkäufer-ID für jede Plattform gleich.
+
+| *Zugriff erlauben*
+| Über diese Schaltfläche gibst du plentymarkets Zugriff auf dein Amazon-Konto, damit Daten zwischen Amazon und plentymarkets ausgetauscht werden können. Du kannst den Zugriff entweder sofort erlauben oder erst später, wenn du das Konto aktivierst.
+
+. Klicke auf die Schaltfläche *Zugriff erlauben*. +
+→ Du wirst zu Amazon weitergeleitet.
+. Gib dort die Zugangsdaten deines Amazon-Verkäuferkontos ein, um dich anzumelden. +
+→ Es wird angezeigt, auf welche Amazon-Daten plentymarkets zugreifen darf.
+. Klicke auf *Confirm*, um den Zugriff zu erlauben. +
+→ In plentymarkets wird das Fenster *Autorisierung abschließen* geöffnet.
+. Klicke auf *Abschließen*.
 
 | *Händler-Token*
 | Händler-Token eingeben, wie im Seller Central zu finden.
@@ -74,8 +59,8 @@ Konto erstellen:
 *_Wichtig:_* Alle plentymarkets E-Mail-Adressen, über die du Nachrichten an Amazon schickst, müssen zuvor bei Amazon im Seller Central-Bereich autorisiert werden.
 
 | *Aktiv*
-| Aktivieren, um die Schnittstelle zu aktivieren. +
-*_Hinweis:_* Damit nicht schon im Vorfeld unerwünscht Daten übertragen werden, Schnittstelle erst aktivieren, wenn alle Einstellungen gespeichert wurden.
+| Häkchen setzen, um die Schnittstelle zu aktivieren. +
+*_Hinweis:_* Aktiviere die Schnittstelle erst, wenn du die Amazon-Schnittstelle komplett eingerichtet hast. Sonst werden schon im Vorfeld unerwünscht Daten zu Amazon übertragen.
 
 | *B2B*
 | Durch Aktivieren wird dieses Konto für Amazon Business aktiviert.
@@ -466,3 +451,45 @@ a| Die folgenden Einstellungen befinden sich zwar im Bereich *Eigener Versand (M
 
 *_Hinweis:_* Diese Einstellungen greifen bei eigenem Versand (MFN) und bei Versand durch Amazon (FBA).
 |===
+
+[#700]
+==== Konto aktivieren
+
+Du hast alle Einstellungen vorgenommen? Dann aktiviere jetzt das Konto, um den Datenaustausch mit Amazon zu starten.
+
+Wie du vorgehst hängt davon ab, ob du beim Einrichten des Kontos den Zugriff schon erlaubt hast.
+
+[tabs]
+====
+Konto aktivieren und Zugriff erlauben::
++
+--
+[.instruction]
+Konto aktivieren und Zugriff erlauben:
+
+. Öffne das Menü *Einrichtung » Märkte » Amazon » Einstellungen » [Konto öffnen]*. +
+→ Das Tab *Einstellungen* für dieses Konto wird geöffnet.
+. Aktiviere die Option *Aktiv*.
+. Klicke auf die Schaltfläche *Zugriff erlauben*. +
+→ Du wirst zu Amazon weitergeleitet.
+. Gib dort die Zugangsdaten deines Amazon-Verkäuferkontos ein, um dich anzumelden. +
+→ Es wird angezeigt, auf welche Amazon-Daten plentymarkets zugreifen darf.
+. Klicke auf *Confirm*, um den Zugriff zu erlauben. +
+→ In plentymarkets wird das Fenster *Autorisierung abschließen* geöffnet.
+. Klicke auf *Abschließen*.
+. Speichere (terra:save[]) die Einstellungen.
+
+--
+ 
+Konto aktivieren, wenn Zugriff schon erlaubt wurde::
++
+--
+[.instruction]
+Konto aktivieren, wenn Zugriff schon erlaubt wurde:
+
+. Öffne das Menü *Einrichtung » Märkte » Amazon » Einstellungen » [Konto öffnen]*. +
+→ Das Tab *Einstellungen* für dieses Konto wird geöffnet.
+. Aktiviere die Option *Aktiv*.
+. Speichere (terra:save[]) die Einstellungen.
+--
+====
