--- a/docs/de-de/modules/daten/pages/praxisbeispiel-bestellungen.adoc
+++ b/docs/de-de/modules/daten/pages/praxisbeispiel-bestellungen.adoc
@@ -5,14 +5,14 @@
 :id: VEG94X9
 :author: team-order-core
 
-Diese Handbuchseite führt Praxisbeispiele zum Erstellen eines Katalogs für den Export von Nachbestellungen und Umbuchungen sowie deren Auftragspositionen auf. Solltest du noch nicht vertraut sein mit den Katalogen, informiere dich zuerst auf der Handbuchseite xref:daten:dateiexport.adoc#[Standardformate nutzen]. Dort erhältst du alle Informationen, die du zum generellen Erstellen und Verwalten von Katalogen brauchst.
+Diese Handbuchseite führt Praxisbeispiele zum Erstellen eines Katalogs für den Export von Nachbestellungen und Umbuchungen sowie deren Auftragspositionen auf. Solltest du noch nicht vertraut sein mit den Katalogen, informiere dich zuerst auf der Handbuchseite xref:daten:standardformate-exportieren.adoc#[Standardformate nutzen]. Dort erhältst du alle Informationen, die du zum generellen Erstellen und Verwalten von Katalogen brauchst.
 
 Das Katalogformat Bestellung umfasst alle Datenfelder für Nachbestellungen und Umbuchungen, Auftragspositionsdaten inbegriffen. Je nach Arbeitsablauf kannst du dir also entweder getrennte Kataloge für den Export der jeweiligen Daten anlegen oder die Daten in einem großen Katalog zusammenstellen und exportieren. Das Limit für den Export von Datensätzen liegt bei 60000. +
 Du hast mit den Katalogen viele Gestaltungs- und Nutzungsmöglichkeiten. Überlege daher zuerst generell, wofür du die exportierten Daten nutzen möchtest und dann welche Daten du dafür benötigst und welche Zusammenstellung in Katalogen für dich sinnvoll ist. Du kannst zum Beispiel einen Katalog erstellen, um Daten statistisch auszuwerten oder einen Katalog, in dem du alle Daten für die Verwaltung von Nachbestellungen zusammenfasst. Du entscheidest, wie die Kataloge aufgebaut sein sollen.
 
 Im Folgenden geben wir Beispiele für Kataloge für den Export von Nachbestellungs- und Umbuchungsdaten. Die Beispiele zeigen Möglichkeiten auf, wie der Export dieser Daten mit dem Katalog gestaltet werden kann. Du kannst bei Bedarf die Beispiele als Unterstützung für die Erstellung deiner Kataloge nutzen, bist aber in der Gestaltung deiner Kataloge frei.
 
-Wähle die folgenden xref:daten:kataloge-verwalten.adoc#130[Grundeinstellungen], wenn du einen neuen Katalog für den Export von Bestellungen erstellen möchtest:
+Wähle die folgenden xref:daten:standardformate-exportieren.adoc#tabelle-grundeinstellungen-standard[Grundeinstellungen], wenn du einen neuen Katalog für den Export von Bestellungen erstellen möchtest:
 
 [[table-basic-settings]]
 .Grundeinstellungen Katalog für den Export von Bestellungen
@@ -53,7 +53,7 @@ Diese Liste lässt sich individuell anpassen und erweitern. Entscheide auch, wel
 [#90]
 === 2. Schritt: Entsprechende Datenfelder hinzufügen
 
-Füge die folgenden xref:daten:kataloge-verwalten.adoc#160[Datenfelder] hinzu, um die aufgelisteten Daten in einem Katalog zusammenzustellen. Du fügst ein Datenfeld hinzu, indem du daneben auf *Hinzufügen* (material:add[]) klickst. +
+Füge die folgenden xref:daten:standardformate-exportieren.adoc#add-fields[Datenfelder] hinzu, um die aufgelisteten Daten in einem Katalog zusammenzustellen. Du fügst ein Datenfeld hinzu, indem du daneben auf *Hinzufügen* (material:add[]) klickst. +
 Du kannst Datenfelder miteinander verknüpfen (material:link[]), so dass sie beim Export zusammen ausgegeben werden, zum Beispiel in einer Spalte einer CSV-Datei. Entscheide individuell, welche Verknüpfungen für dich sinnvoll sind. +
 Speichere (material:save[]) den Katalog nachdem du die Datenfelder hinzugefügt hast.
 
@@ -80,9 +80,9 @@ Die Datenfelder (terra:order_return_create_edit[]) sind thematisch in Ordnern gr
 Beachte außerdem, dass du für manche Datenfelder nach dem Hinzufügen eine zusätzliche Auswahl treffen kannst. Dies siehst du jeweils am hinzugefügten Datenfeld. Triffst du keine Auswahl, werden auch keine Informationen exportiert.
 ====
 
-Übernimmst du die xref:daten:kataloge-verwalten.adoc#165[Reihenfolge der Datenfelder] wie in der Auflistung vorgegeben, werden die Daten auch in dieser Reihenfolge exportiert. Überlege daher vor dem Export, welche Reihenfolge sinnvoll ist. So sind hier zum Beispiel die Bestellsumme und die Preise nicht hintereinander aufgeführt. Du könntest sie aber z.B. auch zusammen anordnen.
+Übernimmst du die xref:daten:standardformate-exportieren.adoc#optional-change-order[Reihenfolge der Datenfelder] wie in der Auflistung vorgegeben, werden die Daten auch in dieser Reihenfolge exportiert. Überlege daher vor dem Export, welche Reihenfolge sinnvoll ist. So sind hier zum Beispiel die Bestellsumme und die Preise nicht hintereinander aufgeführt. Du könntest sie aber z.B. auch zusammen anordnen.
 
-Zudem kannst du auch die xref:daten:kataloge-verwalten.adoc#162[Export Keys] anpassen. Das empfiehlt sich besonders, wenn du Datenfelder miteinander verknüpfst. Oder wenn du das gleiche Datenfeld zweimal hinzufügst, aber dann eine unterschiedliche Auswahl triffst. Über das Datenfeld *Adresse > Adress-ID* z.B. kannst du drei verschiedene IDs wählen. Passe in diesem Fall den Export Key an, damit er aussagekräftiger ist.
+Zudem kannst du auch die xref:daten:standardformate-exportieren.adoc#faq[Export Keys] anpassen. Das empfiehlt sich besonders, wenn du Datenfelder miteinander verknüpfst. Oder wenn du das gleiche Datenfeld zweimal hinzufügst, aber dann eine unterschiedliche Auswahl triffst. Über das Datenfeld *Adresse > Adress-ID* z.B. kannst du drei verschiedene IDs wählen. Passe in diesem Fall den Export Key an, damit er aussagekräftiger ist.
 
 Die Verknüpfungen sind alle optional. Du kannst weitere Datenfelder hinzufügen, weitere Verknüpfungen hinzufügen oder löschen und so den Katalog individuell auf deine Bedürfnisse anpassen. Achte beim Verknüpfen von Datenfeldern auf die Reihenfolge der hinzugefügten Datenfelder. Wähle über die Einstellungen (material:settings[]) in der Datenzeile außerdem ein *Trennzeichen*, damit die verknüpften Daten beim Export korrekt angezeigt werden.
 
@@ -111,10 +111,10 @@ Beachte, dass dir unabhängig von der Auswahl im Filter *Auftragstyp* immer alle
 [#130]
 === 4. Schritt: Katalog exportieren
 
-Nachdem du alle Einstellungen vorgenommen sowie Datenfelder und Filter gesetzt hast, kann der Katalog exportiert werden. Vorher kannst du aber die xref:daten:kataloge-verwalten.adoc#255[Vorschau] nutzen, um deine Einstellungen zu überprüfen.
+Nachdem du alle Einstellungen vorgenommen sowie Datenfelder und Filter gesetzt hast, kann der Katalog exportiert werden. Vorher kannst du aber die xref:daten:standardformate-exportieren.adoc#preview[Vorschau] nutzen, um deine Einstellungen zu überprüfen.
 
-Wirf in diesem Zug auch noch mal einen Blick auf die xref:daten:kataloge-verwalten.adoc#150[Exporteinstellungen] deines Katalogs. Du kannst hier im Feld *Übertragung* wählen, wann der Export gestartet werden soll, beispielsweise *Täglich*. Oder wähle über *Zeitplan* eine konkrete Uhrzeit, beispielsweise *23:40 bis 00:00* Uhr. +
-Beachte dabei, dass Kataloge nach einem Export nur 15 Tage gespeichert werden. Beziehe dies ein, wenn du einen Katalog mehr als einmal verwenden möchtest. Plane den xref:daten:kataloge-verwalten.adoc#260[Katalogexport] entsprechend regelmäßig in deinen Arbeitsablauf ein.
+Wirf in diesem Zug auch noch mal einen Blick auf die xref:daten:standardformate-exportieren.adoc#tabelle-exporteinstellungen-standard[Exporteinstellungen] deines Katalogs. Du kannst hier im Feld *Übertragung* wählen, wann der Export gestartet werden soll, beispielsweise *Täglich*. Oder wähle über *Zeitplan* eine konkrete Uhrzeit, beispielsweise *23:40 bis 00:00* Uhr. +
+Beachte dabei, dass Kataloge nach einem Export nur 15 Tage gespeichert werden. Beziehe dies ein, wenn du einen Katalog mehr als einmal verwenden möchtest. Plane den xref:daten:standardformate-exportieren.adoc#activate-catalogue[Katalogexport] entsprechend regelmäßig in deinen Arbeitsablauf ein.
 
 [#200]
 == Praxisbeispiel: Erster Katalog für Umbuchungen
@@ -136,7 +136,7 @@ Diese Liste lässt sich individuell anpassen und erweitern. Entscheide auch, wel
 [#220]
 === 2. Schritt: Entsprechende Datenfelder hinzufügen
 
-Füge die folgenden xref:daten:kataloge-verwalten.adoc#160[Datenfelder] hinzu, um die aufgelisteten Daten in einem Katalog zusammenzustellen. Du fügst ein Datenfeld hinzu, indem du daneben auf *Hinzufügen* (material:add[]) klickst. +
+Füge die folgenden xref:daten:standardformate-exportieren.adoc#add-fields[Datenfelder] hinzu, um die aufgelisteten Daten in einem Katalog zusammenzustellen. Du fügst ein Datenfeld hinzu, indem du daneben auf *Hinzufügen* (material:add[]) klickst. +
 Du kannst Datenfelder miteinander verknüpfen (material:link[]), so dass sie beim Export zusammen ausgegeben werden, zum Beispiel in einer Spalte einer CSV-Datei. Entscheide individuell, welche Verknüpfungen für dich sinnvoll sind. +
 Speichere (material:save[]) den Katalog nachdem du die Datenfelder hinzugefügt hast.
 
@@ -158,9 +158,9 @@ Die Datenfelder (terra:order_return_create_edit[]) sind thematisch in Ordnern gr
 Beachte außerdem, dass du für manche Datenfelder nach dem Hinzufügen eine zusätzliche Auswahl treffen kannst. Dies siehst du jeweils am hinzugefügten Datenfeld. Triffst du keine Auswahl, werden auch keine Informationen exportiert.
 ====
 
-Übernimmst du die xref:daten:kataloge-verwalten.adoc#165[Reihenfolge der Datenfelder] wie in der Auflistung vorgegeben, werden die Daten auch in dieser Reihenfolge exportiert. Überlege daher vor dem Export, welche Reihenfolge sinnvoll ist. So sind hier zum Beispiel die Mengen nicht nach eingehend und ausgehend sortiert, du könntest diese aber auch zusammen anordnen.
+Übernimmst du die xref:daten:standardformate-exportieren.adoc#optional-change-order[Reihenfolge der Datenfelder] wie in der Auflistung vorgegeben, werden die Daten auch in dieser Reihenfolge exportiert. Überlege daher vor dem Export, welche Reihenfolge sinnvoll ist. So sind hier zum Beispiel die Mengen nicht nach eingehend und ausgehend sortiert, du könntest diese aber auch zusammen anordnen.
 
-Zudem kannst du auch die xref:daten:kataloge-verwalten.adoc#162[Export Keys] anpassen. Das empfiehlt sich besonders, wenn du Datenfelder miteinander verknüpfst. Oder wenn du das gleiche Datenfeld zweimal hinzufügst, aber dann eine unterschiedliche Auswahl triffst, z.B. für das Feld *Lager > Typ-ID*. Passe in diesem Fall den Export Key an, damit er aussagekräftiger ist.
+Zudem kannst du auch die xref:daten:standardformate-exportieren.adoc#faq[Export Keys] anpassen. Das empfiehlt sich besonders, wenn du Datenfelder miteinander verknüpfst. Oder wenn du das gleiche Datenfeld zweimal hinzufügst, aber dann eine unterschiedliche Auswahl triffst, z.B. für das Feld *Lager > Typ-ID*. Passe in diesem Fall den Export Key an, damit er aussagekräftiger ist.
 
 Die Verknüpfungen sind alle optional. Du kannst weitere Datenfelder hinzufügen, weitere Verknüpfungen hinzufügen oder löschen und so den Katalog individuell auf deine Bedürfnisse anpassen. Achte beim Verknüpfen von Datenfeldern auf die Reihenfolge der hinzugefügten Datenfelder. Wähle über die Einstellungen (material:settings[]) in der Datenzeile außerdem ein *Trennzeichen*, damit die verknüpften Daten beim Export korrekt angezeigt werden.
 
@@ -191,7 +191,7 @@ Beachte, dass dir unabhängig von der Auswahl im Filter *Auftragstyp* immer alle
 [#260]
 === 4. Schritt: Katalog exportieren
 
-Nachdem du alle Einstellungen vorgenommen sowie Datenfelder und Filter gesetzt hast, kann der Katalog exportiert werden. Vorher kannst du aber die xref:daten:kataloge-verwalten.adoc#255[Vorschau] nutzen, um deine Einstellungen zu überprüfen.
+Nachdem du alle Einstellungen vorgenommen sowie Datenfelder und Filter gesetzt hast, kann der Katalog exportiert werden. Vorher kannst du aber die xref:daten:standardformate-exportieren.adoc#preview[Vorschau] nutzen, um deine Einstellungen zu überprüfen.
 
-Wirf in diesem Zug auch noch mal einen Blick auf die xref:daten:kataloge-verwalten.adoc#150[Exporteinstellungen] deines Katalogs. Du kannst hier im Feld *Übertragung* wählen, wann der Export gestartet werden soll, beispielsweise *Täglich*. Oder wähle über *Zeitplan* eine konkrete Uhrzeit, beispielsweise *23:40 bis 00:00* Uhr. +
-Beachte dabei, dass Kataloge nach einem Export nur 15 Tage gespeichert werden. Beziehe dies ein, wenn du einen Katalog mehr als einmal verwenden möchtest. Plane den xref:daten:kataloge-verwalten.adoc#260[Katalogexport] entsprechend regelmäßig in deinen Arbeitsablauf ein.
+Wirf in diesem Zug auch noch mal einen Blick auf die xref:daten:standardformate-exportieren.adoc#preview[Exporteinstellungen] deines Katalogs. Du kannst hier im Feld *Übertragung* wählen, wann der Export gestartet werden soll, beispielsweise *Täglich*. Oder wähle über *Zeitplan* eine konkrete Uhrzeit, beispielsweise *23:40 bis 00:00* Uhr. +
+Beachte dabei, dass Kataloge nach einem Export nur 15 Tage gespeichert werden. Beziehe dies ein, wenn du einen Katalog mehr als einmal verwenden möchtest. Plane den xref:daten:standardformate-exportieren.adoc#activate-catalogue[Katalogexport] entsprechend regelmäßig in deinen Arbeitsablauf ein.
