--- a/docs/en-gb/modules/business-decisions/pages/manage-reports.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/manage-reports.adoc
@@ -85,9 +85,9 @@ For further information, refer to the xref:business-decisions:categories.adoc#[c
 |Feedbacks +
 For further information, refer to the xref:business-decisions:feedbacks.adoc#[feedbacks] page of the manual.
 
-|itemManufacturer
+|itemManufacturers
 |Manufacturer +
-For further information, refer to the xref:business-decisions:itemmanufacturer.adoc#[itemManufacturer] page of the manual.
+For further information, refer to the xref:business-decisions:itemmanufacturers.adoc#[itemManufacturers] page of the manual.
 
 |itemVariations
 |Variation +
@@ -99,7 +99,7 @@ For further information, refer to the xref:business-decisions:itemvariationsuppl
 
 |marketplaceStockMovement
 |Stock information that was exported to specific markets +
-For further information, refer to the xref:business-decisions:marketplaceStockMovement.adoc#[marketplaceStockMovement] page of the manual.
+For further information, refer to the xref:business-decisions:marketplacestockmovement.adoc#[marketplaceStockMovement] page of the manual.
 
 |messages
 |Messages +
@@ -131,7 +131,7 @@ For further information, refer to the xref:business-decisions:orderproperties.ad
 
 |orders
 |Order +
-For further information, refer to the xref:business-decisions:orders.adoc#[orders] page of the manual.
+For further information, refer to the xref:business-decisions:orders-raw-data.adoc#[orders] page of the manual.
 
 |orderStatuses
 |Order status +
@@ -179,7 +179,7 @@ For further information, refer to the xref:business-decisions:users.adoc#[users]
 
 |variationValidation
 |Variations that have been exported to markets but have been rejected +
-For further information, refer to the xref:business-decisions:VariationValidation.adoc#[variationValidation] page of the manual.
+For further information, refer to the xref:business-decisions:variationvalidation.adoc#[variationValidation] page of the manual.
 
 |====
 
