--- a/docs/en-gb/modules/data/pages/practical-examples-purchase-order.adoc
+++ b/docs/en-gb/modules/data/pages/practical-examples-purchase-order.adoc
@@ -12,7 +12,7 @@ The catalogues offer a lot of options for compiling and arranging information. T
 
 In the following, we give examples for catalogues for the export of reorder and redistribution data. The examples show how the export of order data can be structured with the catalogues. You can use the examples as guidance when you create your own catalogues, but you are free to set up the catalogues according to your requirements.
 
-Select the following xref:data:managing-catalogues.adoc#120[basic settings] when you want to create a new catalogue for the export of purchase order data:
+Select the following xref:data:export-standard-formats.adoc#table-basic-settings-standard[basic settings] when you want to create a new catalogue for the export of purchase order data:
 
 [[table-basic-settings]]
 .Basic catalogue settings for the export of purchase orders
@@ -53,7 +53,7 @@ You can customise this list, either adapt or extend data. Also decide which comb
 [#90]
 === 2. Step: Add corresponding data fields
 
-Add the following xref:data:managing-catalogues.adoc#160[data fields] to combine the listed data in one catalogue. You add a data field by clicking on *Add data field* (material:add[]). +
+Add the following xref:data:export-standard-formats.adoc#add-fields[data fields] to combine the listed data in one catalogue. You add a data field by clicking on *Add data field* (material:add[]). +
 You can link data fields (material:link[]) so that they are exported together, for example in one column of a CSV file. This is useful for some of the data, e.g. for the first and last name of a contact. You decide which links are useful for you. +
 Save (material:save[]) the catalogue after you added the data fields.
 
@@ -80,9 +80,9 @@ The data fields (terra:order_return_create_edit[]) are grouped topically in fold
 Note also that you can make further selections for some data fields after adding them. You can see this directly at the added data field. If you do not make a selection, no information is exported for these fields.
 ====
 
-If you take over the xref:data:managing-catalogues.adoc#165[order of data fields] as it is listed above, the data are also exported in this order. Because of this, decide which order is most useful to you before you start the export. For example, the order amount and the prices are not listed together, but you could also group them.
+If you take over the xref:data:export-standard-formats.adoc#optional-change-order[order of data fields] as it is listed above, the data are also exported in this order. Because of this, decide which order is most useful to you before you start the export. For example, the order amount and the prices are not listed together, but you could also group them.
 
-In addition, you could also adapt the xref:data:managing-catalogues.adoc#162[Export keys]. This is particularly recommended when you link data fields or when you add the same data field twice with different further selections. When you select the data field *Adress ID* for example, you can select between three different IDs. Adapt the export keyFor so that it is more significant.
+In addition, you could also adapt the xref:data:export-standard-formats.adoc#faq[Export keys]. This is particularly recommended when you link data fields or when you add the same data field twice with different further selections. When you select the data field *Adress ID* for example, you can select between three different IDs. Adapt the export keyFor so that it is more significant.
 
 Linking data fields is optional. You can add further data fields, link more of them or delete them and thus customise the catalogue according to your requirements. When linking data fields, take note of the order in which you link the data fields. Also, select *Separators* from the *Settings*(material:settings[]) so that the exported data are displayed correctly in the export file.
 
@@ -104,10 +104,10 @@ Save (material:save[]) the catalogue after setting the filters.
 [#130]
 === 4. Step: Exporting the catalogue
 
-After you selected all the necessary settings as well as data fields and filters, the catalogue is ready for export. Before that, you can use the xref:data:managing-catalogues.adoc#255[Preview] to check all your settings.
+After you selected all the necessary settings as well as data fields and filters, the catalogue is ready for export. Before that, you can use the xref:data:export-standard-formats.adoc#preview[Preview] to check all your settings.
 
-While your at it, also check the xref:data:managing-catalogues.adoc#150[Export settings] of your catalogue. You can use the setting *Transfer* to decide when the export is started, for example *Daily*. Or you select *Schedule* and then a specific time, e.g. *11:40 pm - 12:00 am*. +
-Note that catalogues are only saved for 15 days after exporting them. Take this into consideration if you want to use a catalogue more than once. Therefore, factor in the xref:data:managing-catalogues.adoc#260[catalogue export] into your workflow.
+While you're at it, also check the xref:data:export-standard-formats.adoc#table-export-settings-standard[Export settings] of your catalogue. You can use the setting *Transfer* to decide when the export is started, for example *Daily*. Or you select *Schedule* and then a specific time, e.g. *11:40 pm - 12:00 am*. +
+Note that catalogues are only saved for 15 days after exporting them. Take this into consideration if you want to use a catalogue more than once. Therefore, factor in the xref:data:export-standard-formats.adoc#activate-catalogue[catalogue export] into your workflow.
 
 [#150]
 == Practical example: First catalogue for redistributions
@@ -129,7 +129,7 @@ You can customise this list, either adapt or extend data. Also decide which comb
 [#190]
 === 2. Step: Add corresponding data fields
 
-Add the following xref:data:managing-catalogues.adoc#160[data fields] to combine the listed data in one catalogue. You add a data field by clicking on *Add data field* (material:add[]). +
+Add the following xref:data:export-standard-formats.adoc#add-fields[data fields] to combine the listed data in one catalogue. You add a data field by clicking on *Add data field* (material:add[]). +
 You can link data fields (material:link[]) so that they are exported together, for example in one column of a CSV file. This is useful for some of the data, e.g. for the first and last name of a contact. You decide which links are useful for you. +
 Save (material:save[]) the catalogue after you added the data fields.
 
@@ -151,9 +151,9 @@ The data fields (terra:order_return_create_edit[]) are grouped topically in fold
 Note also that you can make further selections for some data fields after adding them. You can see this directly at the added data field. If you do not make a selection, no information is exported for these fields.
 ====
 
-If you take over the xref:data:managing-catalogues.adoc#165[order of data fields] as it is listed above, the data are also exported in this order. Because of this, decide which order is most useful to you before you start the export. For example, the quantities are not grouped by inbound and outbound, which could be changed.
+If you take over the xref:data:export-standard-formats.adoc#optional-change-order[order of data fields] as it is listed above, the data are also exported in this order. Because of this, decide which order is most useful to you before you start the export. For example, the quantities are not grouped by inbound and outbound, which could be changed.
 
-In addition, you could also adapt the xref:data:managing-catalogues.adoc#162[Export keys]. This is particularly recommended when you link data fields or when you add the same data field twice with different further selections, for example for the data field *Type ID*. Adapt the export keyFor so that it is more significant.
+In addition, you could also adapt the xref:data:export-standard-formats.adoc#faq[Export keys]. This is particularly recommended when you link data fields or when you add the same data field twice with different further selections, for example for the data field *Type ID*. Adapt the export keyFor so that it is more significant.
 
 Linking data fields is optional. You can add further data fields, link more of them or delete them and thus customise the catalogue according to your requirements. When linking data fields, take note of the order in which you link the data fields. Also, select *Separators* from the *Settings*(material:settings[]) so that the exported data are displayed correctly in the export file.
 
@@ -177,7 +177,7 @@ Save (material:save[]) the catalogue after setting the filters.
 [#230]
 === 4. Step: Exporting the catalogue
 
-After you selected all the necessary settings as well as data fields and filters, the catalogue is ready for export. Before that, you can use the xref:data:managing-catalogues.adoc#255[Preview] to check all your settings.
+After you selected all the necessary settings as well as data fields and filters, the catalogue is ready for export. Before that, you can use the xref:data:export-standard-formats.adoc#preview[Preview] to check all your settings.
 
-While your at it, also check the xref:data:managing-catalogues.adoc#150[Export settings] of your catalogue. You can use the setting *Transfer* to decide when the export is started, for example *Daily*. Or you select *Schedule* and then a specific time, e.g. *11:40 pm - 12:00 am*. +
-Note that catalogues are only saved for 15 days after exporting them. Take this into consideration if you want to use a catalogue more than once. Therefore, factor in the xref:data:managing-catalogues.adoc#260[catalogue export] into your workflow.
+While you're at it, also check the xref:data:export-standard-formats.adoc#table-export-settings-standard[Export settings] of your catalogue. You can use the setting *Transfer* to decide when the export is started, for example *Daily*. Or you select *Schedule* and then a specific time, e.g. *11:40 pm - 12:00 am*. +
+Note that catalogues are only saved for 15 days after exporting them. Take this into consideration if you want to use a catalogue more than once. Therefore, factor in the xref:data:export-standard-formats.adoc#activate-catalogue[catalogue export] into your workflow.
